# hetic-ray-tracing

./: CMakeLists.txt  CMakePresets.json  main.cpp
rayImage/: CMakeLists.txt  Image.cpp  Image.hpp
raymath/: Color.cpp  Color.hpp
